_sass/_layout.scss
.container {
  
  @extend %clearfix;
  
  
  margin: 0 auto;
  max-width: $container-width;
  position: relative;
  
  @include breakpoint(medium) {
    padding: 0 1em;
  }
}

header {
  
  @extend %tight;
  
  background: $accent;
  border-bottom: 1px solid $body-bg;
  font-size: 1.2em;
  margin-bottom: 1em;
  padding: .25em 1em;
  
  @include breakpoint(medium-up) {
    font-size: $font-size;
    height: 35px;
    line-height: 1.6;
    margin-bottom: 0;
    padding-left: 2em;
    padding-right: 2em;
    position: fixed;
    width: 100%;
    z-index: 1;
  }
  
  @include breakpoint(medium) {
    padding: .25em .75em;
  }
  
  .title {
    color: $white;
    
    &:hover {
      color: $white;
      text-decoration: underline;
    }
    
  }
  
  .subtitle {
    color: rgba($white, .55);
    
    &:hover {
      color: rgba($white, .55);
      text-decoration: underline;
    }
    
  }
  
}

.content {
  max-width: 40em;
  position: relative;
  
  @include breakpoint(medium-up) {
    float: right;
    padding-bottom: 5em;
    padding-top: 2em;
    width: 65%;
  }
  
}

.sidebar {
  
  display: none;
  
  @include breakpoint(medium-up) {
    border-right: 1px dashed rgba($text-color, .2);
    display: block;
    float: left;
    height: 100%;
    left: 0;
    overflow-y: scroll;
    padding: 1em 2em 3em;
    position: fixed;
    top: 35px;
    width: 30%;
  }
  
}



.select-tags {
  
  @include breakpoint(medium-up) {
    display: none;
  }
  
}

select {
  
  @extend %upper;
  
  @extend %round;
  
  @extend %tight;
  
  background: lighten($body-bg, 2%);
  border: 1px solid;
  color: $selected-tag;
  display: inline-block;
  font-size: .9em;
  padding: .25em 1em;
}

input {
  background: lighten($body-bg, 2%);
  border: 1px solid;
  border-radius: .4em;
  color: $selected-tag;
  display: inline-block;
  font-family: '.SFNSText-Regular', 'SF UI Text', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
  font-size: .9em;
  height: 22px;
  line-height: 1.5;
  padding: 0 .5em;
  
  @include placeholder {
    color: lighten($selected-tag, 15%);
    font-family: $sans;
    text-transform: uppercase;
  }
   
}


.search-status {
  @extend %clearfix;
  
  margin-bottom: .5em;
  margin-top: 1em;
  
  .family-tag {
    position: relative;
  }
  
  .family-tag:hover {
    color: $accent;
    cursor: pointer;
  }
  
  .family-tag:hover:after {
    content: '\00D7';
    font-size: 5em;
    left: 0;
    line-height: 1;
    position: absolute;
    text-align: center;
    top: -.35em;
    width: 100%;
  }
  
}

.no-results {
  
  @extend %fade;
  
  -webkit-animation: fade $transition * 2 forwards 1s;
  animation: fade $transition * 2 forwards 1s;
  font-size: 1.25em;
  margin-top: 3em;
  
}


.controls {
  border-radius: .5em;
  position: relative;
  
  @include breakpoint(medium-up) {
    //text-align: right;
    -ms-transform: translateY(-3.75em);
    -webkit-transform: translateY(-3.75em);
    transform: translateY(-3.75em);
    transition: $transition;
  }
  
  @include breakpoint(medium) {
    
    select {
      border-radius: 0;
      margin-bottom: .5em;
    }
  }
  
  &.active {
    -ms-transform: translateY(.5em);
    -webkit-transform: translateY(.5em);
    transform: translateY(.5em);
    transition: $transition;
  }
  
  label {
    display: inline-block;
    margin: .25em;
  }
  
  .checkbox {
    position: relative;
    top: 5px;    
  }
  
}

.control-container {
  position: relative;
  
  
  @include breakpoint(medium-up) {
    float: right;
    top: 18px;
  }
  
  @include breakpoint(medium-down) {
    margin-bottom: 1em;
  }
}

hr {
  border: 0;
  border-top: 1px dashed rgba($text-color, .2);
  margin: 1em 0 1.25em;
}

.show-table {
  
  .family-tag {
    display: block;
    text-align: left;
    width: 100%;
  }
  
  .tag-count {
    float: right;
    width: 2em;
  }
  
}

